Fix css alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -13,13 +13,13 @@ html,
 body {
     width: 100%;
     height: 100%;
+    background-color: var(--color-container);
 }
 
 .flexCol {
     display: flex;
     flex-direction: column;
     background-color: var(--color-container);
-    height: 100%;
 }
 
 .barContainer {
@@ -47,6 +47,7 @@ body {
 .container {
     display: flex;
     padding: 0px 20vw;
+    justify-content: center;
 }
 
 .subcontainer {
